Updated some contents

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
 		
 		</div>
 		
+        <div class="contact">
+			<span class="phone">Mob : +91 8086 168 166</span>
+		</div>
+
 		<div class="contact">
 			<div class="email">arun.ag@cabotsolutions.com</div>
+            <div class="email">arun.heyjii@gmail.com</div>
 		</div>
 		
 	</header>
